Wed Aug  1 12:43:57 2001  Ossama Othman  <ossama@uci.edu>

	* ace/Svc_Conf_l.cpp:

	  Reintegreated Nanbor's change (Wed Jun 13 10:22:10 2001  Nanbor
	  Wang  <nanbor@cs.wustl.edu>) that enables proper handling of
	  UNICODE Service Configurator directives.

Wed Aug  1 07:14:42 2001  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* include/makeinclude/platform_vxworks5.x_g++.GNU: Checked in a new
	  version of this file, which includes support for the Hitachi
 	  chip.  Thanks to Frank Wolf for this.

	* ace/Log_Record.cpp (format_msg): Added a cast to fix a warning.
	  Thanks to Bala for reporting this.

Tue Jul 31 22:53:26 2001  Ossama Othman  <ossama@uci.edu>

	* tests/libService_Config_DLL.icc:

	  New Visual Age project file for the libService_Config_DLL
	  library.

	* tests/Makefile.am:

	  Added build targets/dependencies for the libService_Config_DLL
	  library.

Tue Jul 31 22:46:33 2001  Ossama Othman  <ossama@uci.edu>

	* tests/Service_Config_DLL.dsp:
	* tests/Service_Config_Test.dsp:

	  Removed the static library configurations.  The
	  Service_Config_Test currently requires dynamically loadable
	  objects.  Fixes Win32 "LIB" build failures.

Tue Jul 31 22:10:48 2001  Ossama Othman  <ossama@uci.edu>

	* tests/Service_Config_Test.cpp (run_test):

	  Wrap strings passed to ACE_ARGV::add() within an ACE_TEXT
	  macro.  Fixes Unicode conversion problems.

Tue Jul 31 16:53:57 2001  Ossama Othman  <ossama@uci.edu>

	* ace/Svc_Conf.h (ace_yyrestart, ace_yy_delete_parse_buffer,
	  ace_yydirective):

	  Remove these global function and variable declarations.  They
	  are no longer used.

Tue Jul 31 16:43:33 2001  Ossama Othman  <ossama@uci.edu>

	* ace/Basic_Types.h:

	  If "__LITTLE_ENDIAN__" is defined then assume that the
	  architecture is little endian.  Some compilers/platforms define
	  that macro.  Suggested by Frank Wolf" <fwolf@gum.de>.

	* ace/Svc_Conf.h (yy_push_buffer):
	* ace/Svc_Conf.l (yy_push_buffer):