@@ -714,7 +714,7 @@ David McCann <david.mccann@alcatel.at>
 Ruediger Franke <Ruediger.Franke@decrc.abb.de>
 Brian Jones <bjones@edgemail.com>
 Michael Garvin <mgarvin@nortelnetworks.com>
-Mike Vitalo <mvitalo@infoglide.com>
+Mike Vitalo <mvitalo@sprynet.com>
 Kirk Davies <Kirk.Davies@pobox.com>
 Arno Pernozzoli <pernozzoli@bigfoot.com>
 Trey Grubbs <t-grubbs1@raytheon.com>
@@ -1300,10 +1300,10 @@ Egon Wuchner <Egon.Wuchner@mchp.siemens.de>
 Ugendreshwar Kudupudi <ugenderk@rediffmail.com>
 Ekkehard Hoffmann <ehoffman@fzi.de>
 Ted Krovetz <ted@digitalfountain.com>
-Mike Vitalo <mvitalo@sprynet.com>
 Grzegorz Sikora <GSikora1@era.pl>
 Fabris <fabris65@my-deja.com>
 Christina Junru <junruli@lucent.com> 
+Patrick Rabau <Patrick.Rabau@htc.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
